...
    <string name="common__cancel">Cancel</string>
    <string name="common__close">Close</string>
    <string name="common__confirmations">Confirmations</string>
    <string name="common__connect">Connect</string>
    <string name="common__continue">Continue</string>
    <string name="common__copied">Copied To Clipboard</string>
    <string name="common__copy">Copy</string>
    <string name="common__default">Default</string>
    <string name="common__delete">Delete</string>
    <string name="common__delete_yes">Yes, Delete</string>
    <string name="common__dialog_cancel">No, Cancel</string>
    <string name="common__edit">Edit</string>
    <string name="common__empty">Empty</string>
...
    <string name="common__ready">Ready</string>
    <string name="common__reset">Reset</string>
    <string name="common__retry">Retry</string>
    <string name="common__sat_vbyte">₿ / vbyte</string>
    <string name="common__save">Save</string>
    <string name="common__search">Search</string>
    <string name="common__share">Share</string>
    <string name="common__skip">Skip</string>
    <string name="common__success">Success</string>
    <string name="common__try_again">Try Again</string>
    <string name="common__understood">Understood</string>
    <string name="common__usable">Usable</string>
    <string name="common__yes">Yes</string>
    <string name="common__yes_proceed">Yes, Proceed</string>
...
    <string name="settings__adv__section_other">Other</string>
    <string name="settings__adv__section_payments">Payments</string>
    <string name="settings__adv__suggestions_reset">Reset Suggestions</string>
    <string name="settings__advanced_title">Advanced</string>
    <string name="settings__backup__category_connection_receipts">Connection Receipts</string>
    <string name="settings__backup__category_connections">Connections</string>
    <string name="settings__backup__category_contacts">Contacts</string>
    <string name="settings__backup__category_profile">Profile</string>
    <string name="settings__backup__category_settings">Settings</string>
    <string name="settings__backup__category_tags">Tags</string>
    <string name="settings__backup__category_transaction_log">Transaction Log</string>
    <string name="settings__backup__category_wallet">Boosts &amp; Transfers</string>
    <string name="settings__backup__category_widgets">Widgets</string>
...
    <string name="paykit__delete_subscription">Delete Subscription?</string>
    <string name="paykit__description_optional">Description (optional)</string>
    <string name="paykit__device_id">Device ID</string>
    <string name="paykit__device_info">Device Info</string>
    <string name="paykit__directory_error_loading_profile">Directory error loading profile</string>
    <string name="paykit__directory_error_publishing_profile">Directory error publishing profile</string>
    <string name="paykit__discover">Discover</string>
    <string name="paykit__display_name">Display Name</string>
    <string name="paykit__edit_profile">Edit Profile</string>
    <string name="paykit__enable_auto_pay">Enable Auto-Pay</string>
    <string name="paykit__enable_autopay">Enable Autopay</string>
    <string name="paykit__endpoints">Endpoints</string>
    <string name="paykit__enter_a_pubkey_above_to_add_your_first_follow">Enter a pubkey above to add your first follow</string>
...
