...
                    },
                    fullWidth = true,
                    modifier = Modifier
                        .padding(horizontal = 16.dp)
                        .testTag(
                            if (showDetails) {
                                "QRCode"
                            } else {
                                "ShowDetails"
                            }
                        )
                )
            }
...
